--- a/contracts/rg-cw20/Cargo.toml
+++ b/contracts/rg-cw20/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tca-cw20-base"
+name = "rg-cw20"
 authors = ["bwty <whalelephant@users.noreply.github.com>"]
 edition = "2018"
 description = "Basic implementation of a CosmWasm-20 regulatory grade token"
@@ -24,7 +24,7 @@ cosmwasm-std =  "1.0.0"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
-vectis-verifier = { path = "../../packages/vectis-verifier" }
+avida-verifier = { path = "../../packages/avida-verifier" }
 vc-verifier = { path = "../vc-verifier", features = ["library"] }
 
 [dev-dependencies]
