--- a/contracts/vc-verifier/Cargo.toml
+++ b/contracts/vc-verifier/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "vc-verifier"
 version = "0.1.0"
-authors = ["bwty <whalelephant@users.noreply.github.com>"]
+authors = ["belsy <belsy@nymlab.it>"]
 edition = "2018"
 description = "Verifier of verifiable credential proofs"
 license = "Apache-2.0"
@@ -26,8 +26,9 @@ serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
 ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7", rev = "d7d710eaf"}
 # ursa = { path = "../../../../ursa/libursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7" }
-vectis-verifier = { path = "../../packages/vectis-verifier" }
-vectis-wallet = { git = "https://github.com/nymlab/vectis", branch = "v1-beta" }
+avida-verifier = { path = "../../packages/avida-verifier" }
+# vectis-wallet = { git = "https://github.com/nymlab/vectis", branch = "v1-beta" }
+vectis-wallet = { path = "../../../Nymlab/vectis/packages/vectis"}
 
 [dev-dependencies]
 cosmwasm-schema = { version = "1.0.0" }
