--- a/packages/avida-verifier/Cargo.toml
+++ b/packages/avida-verifier/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
-name = "vectis-verifier"
-authors = ["bwty <whalelephant@users.noreply.github.com>"]
+name = "avida-verifier"
+authors = ["belsy <belsy@nymlab.it>"]
 version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+cosmwasm-schema = { version = "1.1" }
 cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7", rev = "d7d710eaf"}
+cw-storage-plus = "1.0.1"
+
 # ursa = { path = "../../../../ursa/libursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7" }
 thiserror = { version = "1.0.23" }
 
