--- a/packages/avida-contracts-multitest/Cargo.toml
+++ b/packages/avida-contracts-multitest/Cargo.toml
@@ -17,6 +17,7 @@ vectis-contract-tests = { path= "../../../Nymlab/vectis/packages/vectis-tests" }
 avida-verifier = { path = "../avida-verifier" }
 serde = { version = "1.0"}
 serde_json = { version = "1.0"}
+vectis-wallet = { git = "https://github.com/nymlab/vectis", rev = "806d189bf4f89" }
 # vectis-contract-tests = {git = "https://github.com/nymlab/vectis", rev = "149bdb3"}
 #rg-cw20 = {path = "../../contracts/rg-cw20"}
 
