--- a/contracts/identity-plugin/Cargo.toml
+++ b/contracts/identity-plugin/Cargo.toml
@@ -14,17 +14,17 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-cw-utils = "1.0.1"
-cw2 = "1.0.1"
-cw20 = "1.0.1"
-cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
-cw-storage-plus = "1.0.1"
-cosmwasm-schema = { version = "1.1" }
-cw-controllers = "1.0.1"
-schemars = "0.8.1"
-semver = "1"
-serde = { version = "1.0.103", default-features = false, features = ["derive"] }
-thiserror = { version = "1.0.23" }
+cw-utils = { workspace = true }
+cw2 = { workspace = true }
+cw20 = { workspace = true }
+cosmwasm-std = { workspace = true }
+cw-storage-plus = { workspace = true }
+cosmwasm-schema = { workspace = true }
+cw-controllers = { workspace = true }
+schemars = { workspace = true }
+semver = { workspace = true }
+serde = { workspace = true }
+thiserror = { workspace = true }
 avida-verifier = { path = "../../packages/avida-verifier" }
 
 [dev-dependencies]
