--- a/packages/avida-contracts-multitest/Cargo.toml
+++ b/packages/avida-contracts-multitest/Cargo.toml
@@ -11,12 +11,12 @@ path = "src/tests/lib.rs"
 [dependencies]
 cw-multi-test = "0.16"
 cosmwasm-std = "1.0.1"
-vc-verifier = { path = "../../contracts/vc-verifier" }
-anoncreds-identity-plugin = {path = "../../contracts/identity-plugin"}
-vectis-contract-tests = { path= "../../../Nymlab/vectis/packages/vectis-tests" }
-avida-verifier = { path = "../avida-verifier" }
 serde = { version = "1.0"}
 serde_json = { version = "1.0"}
+vc-verifier = { path = "../../contracts/vc-verifier" }
+anoncreds-identity-plugin = {path = "../../contracts/identity-plugin"}
+vectis-contract-tests = { git = "https://github.com/nymlab/vectis", rev = "806d189bf4f89" }
+avida-verifier = { path = "../avida-verifier" }
 vectis-wallet = { git = "https://github.com/nymlab/vectis", rev = "806d189bf4f89" }
 # vectis-contract-tests = {git = "https://github.com/nymlab/vectis", rev = "149bdb3"}
 #rg-cw20 = {path = "../../contracts/rg-cw20"}
