--- a/contracts/vc-verifier/Cargo.toml
+++ b/contracts/vc-verifier/Cargo.toml
@@ -14,17 +14,18 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-cw-utils = "1.0.1"
-cw2 = "1.0.1"
-cw20 = "1.0.1"
-cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
-cw-storage-plus = "1.0.1"
-cw-controllers = "1.0.1"
-schemars = "0.8.1"
-semver = "1"
-serde = { version = "1.0.103", default-features = false, features = ["derive"] }
-thiserror = { version = "1.0.23" }
-ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7", rev = "d7d710eaf"}
+cw-utils = {workspace = true}
+cw2 = {workspace = true}
+cw20 = {workspace = true}
+cosmwasm-std = {workspace = true}
+cosmwasm-schema = {workspace = true}
+cw-storage-plus = {workspace = true}
+cw-controllers = {workspace = true}
+schemars = {workspace = true}
+semver = {workspace = true}
+serde = {workspace = true}
+thiserror = {workspace = true}
+ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7", rev = "7cdccf35fb1a0"}
 # ursa = { path = "../../../../ursa/libursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7" }
 avida-verifier = { path = "../../packages/avida-verifier" }
 vectis-wallet = { git = "https://github.com/nymlab/vectis", rev = "806d189bf4f89" }
@@ -32,5 +33,3 @@ vectis-wallet = { git = "https://github.com/nymlab/vectis", rev = "806d189bf4f89
 [dev-dependencies]
 cosmwasm-schema = { version = "1.0.0" }
 serde_json = "1.0"
-ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7", rev = "d7d710eaf"}
-# ursa = { path = "../../../../ursa/libursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7" }
