--- a/packages/avida-verifier/Cargo.toml
+++ b/packages/avida-verifier/Cargo.toml
@@ -9,8 +9,9 @@ cosmwasm-schema = { version = "1.1" }
 cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
-ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7", rev = "d7d710eaf"}
 cw-storage-plus = "1.0.1"
+serde_json = "1.0.1"
+ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7", rev = "7cdccf35fb1a0"}
 
 # ursa = { path = "../../../../ursa/libursa", default-features = false, features = ["cl_onchain", "serde"], version = "0.3.7" }
 thiserror = { version = "1.0.23" }
