--- a/contracts/tca-cw20/Cargo.toml
+++ b/contracts/tca-cw20/Cargo.toml
@@ -24,7 +24,7 @@ cosmwasm-std =  "1.0.0"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
-vectis-verifier = { path = "../../packages/vectis-verifier" }
+avida-verifier = { path = "../../packages/avida-verifier" }
 vc-verifier = { path = "../vc-verifier", features = ["library"] }
 
 [dev-dependencies]
