--- a/contracts/rg-cw20/Cargo.toml
+++ b/contracts/rg-cw20/Cargo.toml
@@ -16,11 +16,12 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-cw-utils = "1.0.1" 
-cw2 = "1.0.1" 
-cw20 =  "1.0.1" 
-cw-storage-plus =  "1.0.1" 
-cosmwasm-std =  "1.0.0" 
+cw-utils = {workspace = true} 
+cw2 = {workspace = true} 
+cw20 = {workspace = true}
+cw-storage-plus = {workspace = true}
+cosmwasm-std = {workspace = true}
+cosmwasm-schema = {workspace = true}
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
