--- a/ursa-demo/Cargo.toml
+++ b/ursa-demo/Cargo.toml
@@ -13,4 +13,5 @@ env_logger = "0.9.0"
 log = "0.4.0"
 serde = { version = "1.0"}
 serde_json = { version = "1.0"}
-ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl", "serde"], rev = "7cdccf35fb1a0"} 
+# ursa = { git = "https://github.com/whalelephant/ursa", default-features = false, features = ["cl", "serde"], rev = "7cdccf35fb1a0"} 
+ursa = { path = "../../ursa/libursa", default-features = false, features = ["cl", "serde"] } 
