--- a/contracts/identity-plugin/Cargo.toml
+++ b/contracts/identity-plugin/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "anoncreds-identity-plugin"
+name = "avida-identity-plugin"
 version = "0.1.0"
 authors = ["belsy <belsy@nymlab.it>"]
 edition = "2018"
@@ -25,7 +25,3 @@ semver = { workspace = true }
 serde = { workspace = true }
 thiserror = { workspace = true }
 avida-verifier = { path = "../../packages/avida-verifier" }
-
-[dev-dependencies]
-cosmwasm-schema = { version = "1.0.0" }
-serde_json = "1.0"
