--- a/ts-tools/package.json
+++ b/ts-tools/package.json
@@ -4,6 +4,62 @@
   "description": "TS tools to deploy and test contracts",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "upload": "ts-node ./upload.ts",
+    "types:generate": "ts-node types.ts && npm run prettier",
+    "deploy": "ts-node ./deploy.ts",
+    "prettier": "prettier --write \"**/*.{js,ts}\""
+  },
+  "devDependencies": {
+    "@confio/relayer": "^0.7.0",
+    "@cosmjs/amino": "^0.29.5",
+    "@cosmjs/cosmwasm-stargate": "^0.29.5",
+    "@cosmjs/crypto": "^0.29.5",
+    "@cosmjs/encoding": "^0.29.5",
+    "@cosmjs/proto-signing": "^0.29.5",
+    "@cosmjs/stargate": "^0.29.5",
+    "@cosmjs/tendermint-rpc": "^0.29.5",
+    "@cosmwasm/ts-codegen": "0.26.0",
+    "@swc/core": "^1.3.41",
+    "@swc/helpers": "^0.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^17.0.38",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "husky": ">=6",
+    "jest": "^28.1.0",
+    "lint-staged": ">=10",
+    "prettier": "^2.6.2",
+    "regenerator-runtime": "^0.13.11",
+    "sinon": "^14.0.1",
+    "ts-jest": "^28.0.3",
+    "ts-node": "^10.8.0",
+    "typescript": "^4.4.4"
+  },
+  "lint-staged": {
+    "*.{ts}": "./cli/node_modules/.bin/prettier --write"
+  },
+  "jest": {
+    "testRegex": "\\.spec\\.ts$",
+    "testTimeout": 600000,
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      ".ts": "ts-jest"
+    },
+    "verbose": true,
+    "testEnvironment": "node",
+    "globals": {
+      "ts-jest": {
+        "isolatedModules": true
+      }
+    }
+  },
+  "dependencies": {
+    "@injectivelabs/networks": "^1.10.8",
+    "@injectivelabs/sdk-ts": "^1.10.54",
+    "@injectivelabs/ts-types": "^1.10.5",
+    "long": "^5.2.1"
   }
 }
