--- a/packages/avida-contracts-multitest/Cargo.toml
+++ b/packages/avida-contracts-multitest/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "avida-contracts-multitest"
-authors = ["belsy <belsy@nymlab.it>"]
+authors = ["belsy <belsy@nymlab.it>", "Arsen <arsen@nymlab.it"]
 version = "0.1.0"
 edition = "2018"
 
@@ -20,6 +20,7 @@ rg-cw20 = {path = "../../contracts/rg-cw20"}
 vectis-contract-tests = { git = "https://github.com/nymlab/vectis", rev = "806d189bf4f89" }
 avida-verifier = { path = "../avida-verifier" }
 vectis-wallet = { git = "https://github.com/nymlab/vectis", rev = "806d189bf4f89" }
+cw20 = {workspace = true}
 # vectis-contract-tests = {git = "https://github.com/nymlab/vectis", rev = "149bdb3"}
 #rg-cw20 = {path = "../../contracts/rg-cw20"}
 
