--- a/ts-tools/package.json
+++ b/ts-tools/package.json
@@ -6,14 +6,12 @@
   "scripts": {
     "upload": "ts-node ./upload.ts",
     "deploy": "ts-node ./deploy.ts",
-    "test": "jest mint_new_rg.spec.ts --runInBand",
-    "test-adapt-new": "jest ./adapt_new_rg.spec.ts",
-    "test-create-rgToken": "ts-node ./test-create-rgtokens.ts",
-    "test-create-account": "ts-node ./test_create_account_plugin.ts",
-    "test-mint": "ts-node ./test_account_mint_rg.ts",
-    "test-transform-inj": "ts-node ./test_account_transform.ts",
-    "test-revert-rginj": "ts-node ./test_revert_transform.ts",
-    "test-unadapt": "ts-node ./test_unadapt.ts",
+    "create-rgTokens": "ts-node ./create-rgtokens.ts",
+    "create-account": "ts-node ./create_account_plugin.ts",
+    "test": "jest ./tests/mint_new_rg.spec.ts --runInBand && jest ./tests/adapt_new_rg.spec.ts --runInBand && jest ./tests/transform.spec.ts",
+    "test-mint": "jest ./tests/mint_new_rg.spec.ts --runInBand",
+    "test-adapt-unadapt": "jest ./tests/adapt_rg.spec.ts",
+    "test-transform-revert": "jest ./tests/transform.spec.ts",
     "types:generate": "ts-node generatetypes.ts && npm run prettier",
     "prettier": "prettier --write \"**/*.{js,ts}\""
   },
